chore: code smells